--- a/index.html
+++ b/index.html
@@ -6,8 +6,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Sidebar Menu </title>
     <link rel="stylesheet" href="css/style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-    
+    <nav class="sidebar">
+        <div class="logo-menu">
+            <h2 class="logo">Codehal</h2>
+            <i class='bx bx-menu'></i>
+        </div>
+        <ui class="list">
+            <li class="list-item">
+                <a href="#">
+                    <span class="link-name">Dashnoard</span>
+                </a>
+            </li>
+        </ui>
+        <ui class="list">
+            <li class="list-item">
+                <a href="#">
+                    <span class="link-name">Dashnoard</span>
+                </a>
+            </li>
+        </ui>
+        <ui class="list">
+            <li class="list-item">
+                <a href="#">
+                    <span class="link-name">Dashnoard</span>
+                </a>
+            </li>
+        </ui>
+        
+    </nav>
 </body>
 </html>
