add icon in class

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <ui class="list">
             <li class="list-item">
                 <a href="#">
+                    <i class='bx bx-grid-alt'></i>
                     <span class="link-name">Dashnoard</span>
                 </a>
             </li>
@@ -24,18 +25,59 @@
         <ui class="list">
             <li class="list-item">
                 <a href="#">
-                    <span class="link-name">Dashnoard</span>
+                    <i class='bx bx-user'></i>
+                    <span class="link-name">User</span>
                 </a>
             </li>
         </ui>
         <ui class="list">
             <li class="list-item">
                 <a href="#">
-                    <span class="link-name">Dashnoard</span>
+                    <i class='bx bx-chat'></i>
+                    <span class="link-name">Messages</span>
                 </a>
             </li>
         </ui>
-        
+        <ui class="list">
+            <li class="list-item">
+                <a href="#">
+                    <i class='bx bx-pie-chart-alt-2' ></i>
+                    <span class="link-name">Analtics</span>
+                </a>
+            </li>
+        </ui>
+        <ui class="list">
+            <li class="list-item">
+                <a href="#">
+                    <i class='bx bx-folder'></i>
+                    <span class="link-name">File Manager</span>
+                </a>
+            </li>
+        </ui>
+        <ui class="list">
+            <li class="list-item">
+                <a href="#">
+                    <i class='bx bx-cart-alt' ></i>
+                    <span class="link-name">Order</span>
+                </a>
+            </li>
+        </ui>
+        <ui class="list">
+            <li class="list-item">
+                <a href="#">
+                    <i class='bx bx-heart'></i>
+                    <span class="link-name">Saved</span>
+                </a>
+            </li>
+        </ui>
+        <ui class="list">
+            <li class="list-item">
+                <a href="#">
+                    <i class='bx bx-cog' ></i>
+                    <span class="link-name">Setting</span>
+                </a>
+            </li>
+        </ui>
     </nav>
 </body>
 </html>
