--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Sidebar Menu </title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./style/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     <nav class="sidebar">
         <div class="logo-menu">
             <h2 class="logo">Codehal</h2>
-            <i class='bx bx-menu'></i>
+            <i class='bx bx-menu toggle-btn '></i>
         </div>
         <ui class="list">
             <li class="list-item">
