--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <i class='bx bx-menu toggle-btn '></i>
         </div>
         <ui class="list">
-            <li class="list-item">
+            <li class="list-item active">
                 <a href="#">
                     <i class='bx bx-grid-alt'></i>
                     <span class="link-name">Dashnoard</span>
